# sqlx-key-gen

./: .env  Cargo.toml  LICENSE  README.md
src/: main.rs
